<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/add_photo_button"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_add_a_photo_black_24dp" />

    <LinearLayout
        android:id="@+id/name_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/necessary_msg" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />
        <!-- Supplier field -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier" />


        <EditText
            android:id="@+id/edit_product_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint__product_supplier" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_price" />

        <!-- price field -->
        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint__product_price"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/current_quantity" />

        <!-- quantity field -->
        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_current_quantity"
            android:inputType="number" />

        <TextView
            android:id="@+id/edit_display_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/change_quantity_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp">

            <ImageView
                android:id="@+id/reduce_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reduce_button" />

            <EditText
                android:id="@+id/edit_change_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/increase_button" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/order_more_button" />

</RelativeLayout>